namespace TuberTreats.Models.DTO;

public class ToppingDTO 
{
    public int Id { get; set; }
    public string Name { get; set; }
}